--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -15,11 +15,12 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            App\Domain\Room:
+                type: xml
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/Infrastructure/ORM/Mapping'
+                prefix: 'App\Domain\Room'
+                alias: 'Room'
 
 when@test:
     doctrine:
