--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
+        path: ../src/Application/Controller/
         namespace: App\Controller
     type: attribute
