--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,13 +11,20 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+
+    _instanceof:
+        App\CommandHandler\CommandHandler:
+            tags:
+                - { name: messenger.message_handler, bus: command.bus }
+        App\QueryHandler\QueryHandler:
+            tags:
+                - { name: messenger.message_handler, bus: query.bus }
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
