--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.16",
         "ramsey/uuid": "*",
         "symfony/console": "6.3.*",
+        "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
